--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <div id="myDIV" class="header">
         <h2>To Do app</h2>
         <button class="deleteAllBtn">Delete all</button>
+        <button class="deleteLastBtn">Delete Last</button>
         <input type="text" id="myInput" placeholder="Enter todo...">
         <span class="addBtn" onclick="newElement()">Add</span>
+        <input class="elasticin" id="elastic" type="text" placeholder="Search...">
     </div>
     <ul class="spisok" id="myUL">
         <li class="checked">Task1</li>
